# baxter_pykdl

./: CMakeLists.txt  README.rst  package.xml  setup.py
scripts/: baxter_kinematics.py  display_urdf.py
src/baxter_kdl/: kdl_kinematics.py  kdl_parser.py
src/baxter_pykdl/: baxter_pykdl.py
src/urdf_parser_py/: urdf.py
src/urdf_parser_py/xml_reflection/: basics.py  core.py
